--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -4,13 +4,21 @@
     box-sizing: border-box;
 } */
 
+body {
+    justify-content: center;
+    align-items: center;
+    /* background: #16384c; */
+    background: grey;
+}
+
 nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    font-family: "Poppins", sans-serif;
-    background-color: #5d4954;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    /* background-color: #5d4954; */
+    background-color: #16384c;
 }
 
 .logo {
@@ -51,27 +59,70 @@ nav {
     transition: all 0.3s ease;
 }
 
+/* .container {
+    display: flex;
+    flex-direction: row;
+} */
+
+.container {
+    display: grid;
+    height: 100vh;
+    width: 40vw;
+    align-items: center;
+    grid-gap: 20px;
+    margin-top: 30px;
+    font-family: roboto;
+    border-radius: 18px;
+    /* responsive with auto-fit */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid 3px black;
+    background: whitesmoke;
+    box-shadow: 5px 10px 25px rgba(0, 0, 0, 2);
+    border-radius: 18px;
+    /* hover effect see card:hover */
+    transition: 0.6;
+    cursor: pointer;
+}
+
+.card:hover {
+    transform: scale(1.2);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
+}
+
+img {
+    max-width: 100%;
+    margin-top: 20px;
+    border-radius: 18px;
+    padding: 5px;
+    border: solid 3px black;
+    align-items: center;
+}
+
+.title {
+    /* text-align: center; */
+    font-style: italic;
+}
+
 h1 {
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-.container {
-    display: flex;
-    flex-direction: row;
-}
-
-img {
+input {
+    /* align-items: center; */
+    width: 150px;
+    /* background: green; */
     padding: 10px;
-    border: solid 5px black;
-    margin-left: 30px;
-}
+    margin: 10px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0.1);
 
-p {
-    text-align: center;
-    font-style: italic;
-    margin-left: -1%;
-    margin-top: -1%;
+    border-radius: 3px;
 }
 
 @media screen and (max-width: 1024px) {
