--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -5,10 +5,12 @@
 }  */
 
 body {
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     /* background: #16384c; */
     background: rgb(123, 109, 127);
+    text-align: center;
+    /* margin: 10; */
 }
 
 button {
@@ -50,7 +52,6 @@ button:active:after {
 
 .overlay {
     background-color: black;
-    /* background-image: url(music.jpg); */
     position: fixed;
     top: 100px;
     right: 100px;
@@ -58,6 +59,10 @@ button:active:after {
     left: 25px;
     opacity: 0.8;
     color: white;
+}
+
+form {
+    display: inline-block;
 }
 
 /* .overlay:hover {
@@ -86,19 +91,6 @@ h3 {
     width: 60%;
     height: 60%;
 }
-
-/* form {
-    align-items: center;
-}
-input,
-select,
-textarea {
-    width: 200px;
-    margin: 10px;
-    padding: 9px 10px;
-    font-family: "Source Code Pro", monospace;
-    color: #666;
-} */
 
 nav {
     display: flex;
@@ -158,7 +150,6 @@ nav {
 .container {
     display: grid;
     height: 100vh;
-    width: 40vw;
     align-items: center;
     grid-gap: 50px;
     margin-top: 30px;
@@ -192,8 +183,9 @@ img {
     padding: 5px;
     border: solid 1px black;
     align-items: center;
-    width: 50%;
-    height: 50%;
+    width: 70%;
+    height: 80%;
+    object-fit: cover;
 }
 
 .title {
@@ -207,13 +199,10 @@ h1 {
 }
 
 input {
-    /* align-items: center; */
     width: 150px;
-    /* background: green; */
     padding: 10px;
     margin: 10px 0;
     box-shadow: 0px 0px 10px rgba(0, 0, 0.1);
-
     border-radius: 3px;
 }
 
