--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -69,7 +69,9 @@ button:active:after {
 .overlay {
     /* margin: auto; */
     position: fixed;
-    /* top: 50px; */
+    top: 50px;
+    height: 100%;
+    overflow-y: scroll;
     left: 50%;
     transform: translateX(-50%);
     bottom: 50px;
@@ -93,6 +95,20 @@ button:active:after {
     margin-right: auto;
     width: 60%;
     height: 60%;
+}
+
+.overlay-btn {
+    display: inline-block;
+    /* background-color: #802205; */
+    background-color: #16384c;
+    border: none;
+    color: white;
+    text-align: center;
+    opacity: 0.6;
+    transition: 0.3s;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5%;
 }
 
 form {
@@ -284,3 +300,7 @@ input {
 .toggle .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
 } */
+
+.show-comment {
+    border: 4px solid yellow;
+}
